[package]
name = "ferron-module-asgi"
version = "0.1.0"
edition = "2021"

[dependencies]
ferron-common = { workspace = true }
async-channel = "2.3.1"
async-trait = "0.1.88"
bytes = "1.10.1"
futures-util = { version = "0.3.31", features = ["sink"] }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.27.0", features = [
    "tokio",
    "tokio-runtime",
] }
tokio = "1.45.0"
tokio-tungstenite = { version = "0.28.0" }
hyper-tungstenite = { version = "0.19.0" }
http-body-util = "0.1.3"
hyper = "1.6.0"
tokio-util = "0.7.15"
anyhow = "1.0.98"
urlencoding = "2.1.3"
monoio = { version = "0.2.4", optional = true }

[features]
default = ["runtime-monoio"]
runtime-monoio = ["ferron-common/runtime-monoio", "monoio"]
runtime-tokio = ["ferron-common/runtime-tokio"]
