[package]
name = "ferron-module-wsgi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
ferron-common = { workspace = true }
ferron-modules-wsgi-common = { workspace = true }
futures-executor = "0.3.31"
futures-util = "0.3.31"
hashlink = "0.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
pyo3 = { workspace = true }
tokio = { version = "1.47.0", default-features = false }
tokio-util = "0.7.15"
monoio = { version = "0.2.4", optional = true }
urlencoding = "2.1.3"

[features]
default = ["runtime-monoio"]
runtime-monoio = ["monoio"]
runtime-tokio = []

[dev-dependencies]
async-channel = "2.5.0"
