[package]
name = "ferron-module-wsgid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-io = "2.5.0"
async-trait = "0.1.88"
bytes = "1.10.1"
ferron-common = { workspace = true }
ferron-modules-wsgi-common = { workspace = true }
futures-util = "0.3.31"
hashlink = { version = "0.11.0", features = ["serde", "serde_impl"] }
http-body-util = "0.1.3"
hyper = "1.6.0"
interprocess = "2.2.3"
nix = { version = "0.30.1", features = ["signal", "process"] }
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
pyo3 = { workspace = true }
rand = "0.9.2"
serde = "1.0.219"
serde_bytes = "0.11.17"
tokio = "1.47.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
monoio = { version = "0.2.4", optional = true }
urlencoding = "2.1.3"

[features]
default = ["runtime-monoio"]
runtime-monoio = ["ferron-common/runtime-monoio", "monoio"]
runtime-tokio = ["ferron-common/runtime-tokio"]
